# windows-display-profile

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
cli/: Cargo.toml  README.md
cli/src/: main.rs
data/clone-squared/: README.md
data/profiles/AOC+Dell-cloned/: profile.json
data/profiles/AOC+Dell-extended/: profile.json
data/profiles/AOC-only/: profile.json
data/profiles/Dell+AOC-extended/: profile.json
display-profile/cli/: Cargo.toml
display-profile/cli/src/: args.rs
display-profile/data/: aggregate-jsons.sh  regenerate-profile-files.sh
display-profile/data/clone-squared/: commands.sh
display-profile/data/profiles/AOC+Dell-cloned-squared/: profile.json
display-profile/data/profiles/Dell-only/: profile.json
display-profile/lib/: Cargo.toml
display-profile/lib/src/: error.rs  get_profile.rs  lib.rs  set_profile.rs  util.rs
lib/: Cargo.toml  README.md
lib/src/: error.rs  get_profile.rs  lib.rs  set_profile.rs
windows-ccd/: Cargo.toml  README.md
windows-ccd-example/: Cargo.toml
windows-ccd-example/src/: main.rs
windows-ccd/examples/: setup_paths_in_clone.rs
windows-ccd/src/: device_id.rs  dump.rs  error.rs  lib.rs  util.rs  windows.rs
windows-display-config/: Cargo.toml
windows-display-config/src/: dump.rs  error.rs  lib.rs  util.rs  windows.rs
