[workspace]
members = [
    "cli",
    "lib",
    "windows-ccd",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
display-profile-lib.path = "lib"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
windows = "0.62.2"
windows-ccd.path = "windows-ccd"

[workspace.lints.clippy]
pedantic = "warn"
