[package]
name = "display-profile"
description = "A CLI tool to save and apply Windows display configurations"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["windows", "ccd", "display", "monitors"]
categories = ["command-line-utilities"]

[features]
dump = ["display-profile-lib/dump"]

[dependencies]
anyhow.workspace = true
display-profile-lib = { workspace = true, features = ["serde"] }
serde_json.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-msvc"
targets = []
