[package]
name = "display-profile-lib"
description = "Provides functions and types to get and set a Windows display profile."
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["windows", "ccd", "display", "monitors"]

[features]
dump = [ "windows-ccd/dump" ]

[dependencies]
serde = { workspace = true, optional = true }
windows-ccd.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-msvc"
targets = []
