[package]
name = "windows-ccd"
description = "Provides some convenience utilities for the [Windows CCD API]"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["windows", "ccd", "display", "win32", "api"]
categories = ["api-bindings", "os::windows-apis"]

[features]
dump = [ "dep:serde_json", "windows/Wdk_Graphics_Direct3D" ]

[dependencies]
serde_json = { workspace = true, optional = true }
windows = { workspace = true, features = [
  "Win32_Devices_Display",
  "Win32_Graphics_Gdi",
] }

[dev-dependencies]
anyhow.workspace = true

[lints]
workspace = true
